--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -264,37 +264,72 @@ In addition to continuous feedback from the teaching team and others student, we
 
 This evaluation aim is twofold; first assess the usability and assess the user experience.
 
-Dealing with limited means, our evaluation is limited to three volunteers evaluators with no previous knowledge of our product.
-
-
-% Student in CS and non-tech guy with no previous knwoledge on our product.
-
-% Evalution take place in front of computer in natural setting
-
+Dealing with limited means, our evaluation is limited to five volunteers evaluators with no previous knowledge of our product. It was a challenge to find evaluators due to the fixed location of the VIVE setup.
 
 \subsection{Usability}
 
+Usability evaluation can be defined as trying to assess the ease of use and learnability of our interface and moreover trying to assess that the usability goals are met. Due to the limited number of evalutors, Nielsen Heuristic deemed appropriate.
+
 \subsubsection{Conducting evaluation}
 
-The evaluation is a discount evaluation of 3 users using Nielsen Heuristic. According to Nielsen and Landauer (1993), this evaluation should allows us to discover about 60 percents of usability problems. Also according to Nielsen and Landauer the cost to benefit ratio of having 3 users is nearly maximal just under a ratio of 60.
+The evaluation is a discount evaluation of 5 users using Nielsen Heuristic. According to Nielsen and Landauer (1993), this evaluation should allows us to discover about 75 percents of usability problems. Also according to Nielsen and Landauer the cost to benefit ratio of having 5 users is nearly maximal just under a ratio of 60.
 
-% how it was done
+This was a two passes evaluation during which creators observed and took notes about an evaluator. Each evaluators passed the evaluation one by one without seeing each other to avoid getting information about how to use the interface. The idea here was to let the user used it without explanation and see if the user managed to learn how to use it.
+
+Then creators asked the evaluator to fill a form regarding each heuristic and then did a debriefing with each evaluator.
 
 \subsubsection{Results}
+
+The observation concluded that all the 5 users were able to turn the head around and explore pictures after saying a tags without looking at the help feature. Some had to read the help to use others features but some got the moving part and recommendation directly. Then all read the help and used most of the features. On the could be better side, some people with strong accent were badly recognized by the voice recognizer. One user was reading what she was seeing on the screen out loud making the system recognize unwanted tags. 
+
+Now regarding the heuristics, the 5 evaluations could be summarised as follow :
+\begin{itemize}
+	\item \textbf{Visibility of system status} : Since the pictures of a particular tag are displayed, it's easy to know the system status. Could immediately tell when a tag is recognized or when it failed to recognize.
+	\item \textbf{Match between system and the real world} : Saying keyword is a good match between system and real world. One said that the use of the word "tag" is too system-oriented. 
+	\item \textbf{User control and freedom} : Not really applicable here since the last tag enable the user to go back to that particular tag.
+	\item \textbf{Consistency and standards} : Every action has it own clear purpose. 
+	\item \textbf{Error prevention} : No real error can be make, same as user control and freedom.
+	\item \textbf{Recognition rather than recall} : Help need to be read to find advanced features.
+	\item \textbf{Flexibility and efficiency of use} : All evaluators left this one blank.
+	\item \textbf{Aesthetic and minimalist design} :Beautiful and minimalist design. Nothing is not in its right place.
+	\item \textbf{Help users recognize, diagnose, and recover from errors} : Nothing happens in case of an error (just wrong pictures shown). So not really applicable. More random suggestion could be needed.
+	\item \textbf{Help and documentation} : Help is clear even dense.
+\end{itemize}
+
+
+
+In fact, the user really
+
 
 \subsection{User experience}
 
+User experience refer to the evaluator emotions and attitudes about using our interface. The idea behind this evaluation is to assess how the user feels about our interface and assess that the user experience goals are met.
+
 
 \subsubsection{Conducting evaluation}
 
+This user experience evaluation strictly follows the one given by the assistant during the lab session for the spoon.
+
+\todo{ici}
 \subsubsection{Results}
 
+% graph
+\todo{ici}
+
+\begin{itemize}
+	\item It’s globally enjoyable/pleasing
+	\item It’s exciting
+	\item It’s innovative 
+	\item Could be easier to learn 
+	\item Could be more predictable
+	\item Could be faster
+\end{itemize}
 
 
 \section{Acknowledgement}
 
 Before ending this report, we would really like to thanks the VUB Soft Lab for lending us the HTC Vive needed for the realization of this project.
-We also would like to thanks the participant of the evaluation and all that give us feedback during the making of this Next-gen UI.
+We also would like to thanks participants of the evaluation and all others that gave us feedback during the making of this Next-gen UI.
 
 \section{Conclusion}
 
