[Add] Added pictures in annex

--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -334,6 +334,41 @@ We also would like to thanks participants of the evaluation and all others that 
 
 \section{Conclusion and Future work}
 We proposed IPB, an intelligent picture browser that allows the user to see pictures corresponding to tags all around him in a VR environment. This was accomplished in several iterations using state-of-the-art technologies. The outcome is fully functional and was tested against different users with different accents to assess their user experience as well as the application usability. The evaluation was mostly positive but flaws were discovered thanks to the feedback we received and most of them were corrected. However, the application could be, in the future, made easier to learn as well as faster to run.
+\pagebreak
+\section{Pictures}
+
+\begin{figure}[h]
+  \label{fig:help}
+  \includegraphics[width=\textwidth]{img/Help.jpg}
+\end{figure}
+
+\begin{figure}[h]
+  \label{fig:cntr}
+  \includegraphics[width=\textwidth]{img/Controllers.jpg}
+\end{figure}
+
+\begin{figure}[h]
+  \label{fig:1tag}
+  \includegraphics[width=\textwidth]{img/SimpleTag.jpg}
+\end{figure}
+
+\begin{figure}[h]
+  \label{fig:3tag}
+  \includegraphics[width=\textwidth]{img/TripleTag.jpg}
+\end{figure}
+
+\begin{figure}[h]
+  \label{fig:suggestions}
+  \includegraphics[width=\textwidth]{img/Start.jpg}
+\end{figure}
+
+\begin{figure}[h]
+  \label{fig:vive}
+  \includegraphics[width=\textwidth]{img/vive.jpg}
+\end{figure}
+
+\end{document}
+
 
 \end{document}
 
