[fix] img position and part of biblio

--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -11,7 +11,7 @@
 \usepackage{hyperref} 
 \usepackage{afterpage}
 \author{Pierre Gerard - Matteo Marra - Bruno Rocha Pereira}
-\title{Given One \\ - \\Intelligent Picture Browser \\  - \\Requirements and Analysis report}
+\title{Intelligent Picture Browser \\ - \\Given One \\  - \\Requirements and Analysis report}
 \date{December 19, 2016}
 
 \begin{document}
@@ -27,6 +27,12 @@ Among those devices, Virtual Reality sets are spreading as they get more afforda
 Our brainstorming led us to imagine a future where we could use Virtual Reality on a common basis. We thought about what an user would like to have which doesn't exist yet, and how to implement it to make the user feel comfortable in this totally new environment.
 
 The system will offer the user a collection of pictures in a Virtual Reality environment, allowing him to browse them in a smart way.
+
+\begin{figure}[H]
+  \label{fig:vive}
+  \centering
+  \includegraphics[width=0.4\textwidth]{img/vive.jpg}
+\end{figure}
 
 \section{Problem to be solved}
 
@@ -94,7 +100,7 @@ The prototype built at this point was capable of handling voice-recognized keywo
 This iteration focused on user goals and on usability through improvement of the first high-fidelity prototype. Following users feedback, we changed the way the pictures were displayed : instead of showing a "wall" of pictures we decided to surround the user with picture, circling the user with pictures.
 We also added more advanced queries, where a user can do the union and the intersection of subsets of pictures using combination tags.
 
-\subsection{Iteration 6 : final product}
+\subsection{Iteration 6 : Final product}
 
 This iteration was about finishing and polishing our user interface. We first added visibility to the features implemented and that a user can possibly use. To do that we added to tag suggestion and selected tag to the screen.
 
@@ -118,6 +124,12 @@ After executing the tagging script, images are flagged with one or more tags, th
 
 \subsubsection{Basic functionalities}
 
+\begin{figure}[H]
+  \label{fig:1tag}
+  \centering
+  \includegraphics[width=\textwidth]{img/SimpleTag.jpg}
+\end{figure}
+
 The user can:
 \begin{itemize}
 \item Select pictures using one of their tag
@@ -131,6 +143,13 @@ At the beginning, the suggested tags are the most present in all the pictures ta
 
 
 \subsubsection{Advanced functionalities}
+
+\begin{figure}[H]
+  \label{fig:3tag}
+  \centering
+  \includegraphics[width=0.8\textwidth]{img/TripleTag.jpg}
+\end{figure}
+
 The user can
 \begin{itemize}
 \item Query different tags via mathematical intersection and union
@@ -144,7 +163,7 @@ The user can
 \begin{figure}[H]
   \label{fig:help}
   \centering
-  \includegraphics[width=\textwidth]{img/interaction.png}
+  \includegraphics[width=0.8\textwidth]{img/interaction.png}
 \end{figure}
 
 
@@ -193,9 +212,10 @@ The selected technologies are :
 	\item \texttt{Newtonsoft.Json} library to parse the Json in the C$\#$ environment.
 \end{itemize}
 
-As said above, the pictures tagging is done automatically using a neural network. More precisely the tagging is done using a deep convolutional neural network with a selected pre-trained model on ImageNet \todo{http://www.image-net.org/}. The selected model, Inception-v3,\todo{ref needed} can classify entire pictures library into 1000 classes such as for example cliff, seashore, dishwasher, leopard, ... Each picture given as input to the network will give as an output a vector of probability corresponding to the probability to find each of the 1000 class in the pictures. Then the idea is to select the ones with the higher probabilities.
+\subsubsection{Automatic tagging} 
 
-\todo{does the NN paragraph is at the right place?}
+As said above, the pictures tagging is done automatically using a neural network. More precisely the tagging is done using TensorFlow \cite{abadi2016tensorflow}, a deep convolutional neural network, with a selected pre-trained model on ImageNet \footnote{http://www.image-net.org/}. The selected model, Inception-v3,\todo{ref needed} can classify entire pictures library into 1000 classes such as for example cliff, seashore, dishwasher, leopard, ... Each picture given as input to the network will give as an output a vector of probability corresponding to the probability to find each of the 1000 class in the pictures. Then the idea is to select the ones with the higher probabilities.
+
 
 \subsection{Architecture}
 
@@ -354,48 +374,13 @@ We also would like to thanks participants of the evaluation and all others that 
 \section{Conclusion and Future work}
 We proposed IPB, an intelligent picture browser that allows the user to see pictures corresponding to tags all around him in a VR environment. This was accomplished in several iterations using state-of-the-art technologies. The outcome is fully functional and was tested against different users with different accents to assess their user experience as well as the application usability. The evaluation was mostly positive but flaws were discovered thanks to the feedback we received and most of them were corrected. However, the application could be, in the future, made easier to learn as well as faster to run.
 \pagebreak
-\section{Pictures}
 
-\begin{figure}[H]
-  \label{fig:help}
-  \centering
-  \includegraphics[width=\textwidth]{img/Help.jpg}
-\end{figure}
-
-\begin{figure}[H]
-  \label{fig:cntr}
-  \centering
-  \includegraphics[width=\textwidth]{img/Controllers.jpg}
-\end{figure}
-
-\begin{figure}[H]
-  \label{fig:1tag}
-  \centering
-  \includegraphics[width=\textwidth]{img/SimpleTag.jpg}
-\end{figure}
-
-\begin{figure}[H]
-  \label{fig:3tag}
-  \centering
-  \includegraphics[width=\textwidth]{img/TripleTag.jpg}
-\end{figure}
-
-\begin{figure}[H]
-  \label{fig:suggestions}
-  \centering
-  \includegraphics[width=\textwidth]{img/Start.jpg}
-\end{figure}
-
-\begin{figure}[H]
-  \label{fig:vive}
-  \centering
-  \includegraphics[width=\textwidth]{img/vive.jpg}
-\end{figure}
+\bibliographystyle{ieeetr}
+\bibliography{biblio}
 
 \end{document}
 
 
-\end{document}
 
 
 
