[add] Unity ref from requirements repport

--- a/report/final/biblio.bib
+++ b/report/final/biblio.bib
@@ -26,3 +26,12 @@ year = {1996}
   journal={arXiv preprint arXiv:1603.04467},
   year={2016}
 }
+
+@inproceedings{laugwitz2008construction,
+  title={Construction and evaluation of a user experience questionnaire},
+  author={Laugwitz, Bettina and Held, Theo and Schrepp, Martin},
+  booktitle={Symposium of the Austrian HCI and Usability Engineering Group},
+  pages={63--76},
+  year={2008},
+  organization={Springer}
+}
