--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -261,36 +261,36 @@ Finally, in order to run our application using the HTC Vive headset, we needed t
 
 \section{Evaluation} \label{eval}
 
-In addition to continuous feedback from the teaching team and others student, we did a formal evaluation.
+In addition to continuous feedback from the teaching team and others students, we did a formal evaluation.
 
-This evaluation aim is twofold; first assess the usability and assess the user experience.
+This evaluation aim is double; it first assess the usability as well as the user experience.
 
-Dealing with limited means, our evaluation is limited to five volunteers evaluators with no previous knowledge of our product. It was a challenge to find evaluators due to the fixed location of the VIVE setup.
+Dealing with limited means, our evaluation is limited to five volunteer evaluators with no previous knowledge of our product. It was a challenge to find more evaluators due to the fixed location of the VIVE setup.
 
 \subsection{Usability}
 
-Usability evaluation can be defined as trying to assess the ease of use and learnability of our interface and moreover trying to assess that the usability goals are met. Due to the limited number of evalutors, Nielsen Heuristic deemed appropriate.
+Usability evaluation can be defined as trying to assess the ease of use and learnability of our interface and moreover trying to assess that the usability goals are met. Due to the limited number of evaluators, the Nielsen Heuristic seemed appropriate.
 
 \subsubsection{Conducting evaluation}
 
-The evaluation is a discount evaluation of 5 users using Nielsen Heuristic. According to Nielsen and Landauer (1993), this evaluation should allows us to discover about 75 percents of usability problems. Also according to Nielsen and Landauer the cost to benefit ratio of having 5 users is nearly maximal just under a ratio of 60.
+The evaluation is a discount evaluation of 5 users using Nielsen Heuristic. According to Nielsen and Landauer (1993), this evaluation should allow us to discover about 75 percents of usability problems. Also according to Nielsen and Landauer the cost to benefit ratio of having 5 users is nearly maximal, being just under 60.
 
-This was a two passes evaluation during which creators observed and took notes about an evaluator. Each evaluators passed the evaluation one by one without seeing each other to avoid getting information about how to use the interface. The idea here was to let the user used it without explanation and see if the user managed to learn how to use it.
+This was a two passes evaluation during which we observed and took notes about an evaluator. Each evaluator passed the evaluation one by one without seeing each other to avoid getting information about how to use the interface. The idea here was to let the user use the application without explanation and see if the user managed to learn how to use it.
 
-Then creators asked the evaluator to fill a form regarding each heuristic and then did a debriefing with each evaluator.
+We then asked the evaluators to fill a form regarding each heuristic and then did a debriefing with them one by one.
 
 \subsubsection{Results}
 
-The observation concluded that all the 5 users were able to turn the head around and explore pictures after saying a tags without looking at the help feature. Some had to read the help to use others features but some got the moving part and recommendation directly. Then all read the help and used most of the features. On the could be better side, some people with strong accent were badly recognized by the voice recognizer. One user was reading what she was seeing on the screen out loud making the system recognize unwanted tags. 
+The observation concluded that all the 5 users were able to turn their head around and explore pictures after saying a tags without looking at the help feature. Some had to read the help to use other features but some got the moving part and recommendation directly. Then all of them read the help and used most of the features. On the "could be better" side, some people with strong accent were poorly recognized by the voice recognizer. One user was reading what he was seeing on the screen out loud making the system recognize unwanted tags. 
 
-Now regarding the heuristics, the 5 evaluations could be summarised as follow :
+Now regarding the heuristics, the 5 evaluations could be summarized as follow :
 \begin{itemize}
 	\item \textbf{Visibility of system status} : Since the pictures of a particular tag are displayed, it's easy to know the system status. Could immediately tell when a tag is recognized or when it failed to recognize.
-	\item \textbf{Match between system and the real world} : Saying keyword is a good match between system and real world. One said that the use of the word "tag" is too system-oriented. 
+	\item \textbf{Match between system and the real world} : Saying keyword is a good match between system and real world. One of the evaluation subject said that the use of the word "tag" is too system-oriented. 
 	\item \textbf{User control and freedom} : Not really applicable here since the last tag enable the user to go back to that particular tag.
-	\item \textbf{Consistency and standards} : Every action has it own clear purpose. 
-	\item \textbf{Error prevention} : No real error can be make, same as user control and freedom.
-	\item \textbf{Recognition rather than recall} : Help need to be read to find advanced features.
+	\item \textbf{Consistency and standards} : Every action has its own clear purpose. 
+	\item \textbf{Error prevention} : No real error can be made, same as user control and freedom.
+	\item \textbf{Recognition rather than recall} : Help needs to be read to find advanced features.
 	\item \textbf{Flexibility and efficiency of use} : All evaluators left this one blank.
 	\item \textbf{Aesthetic and minimalist design} :Beautiful and minimalist design. Nothing is not in its right place.
 	\item \textbf{Help users recognize, diagnose, and recover from errors} : Nothing happens in case of an error (just wrong pictures shown). So not really applicable. More random suggestion could be needed.
@@ -304,7 +304,7 @@ In fact, the user really
 
 \subsection{User experience}
 
-User experience refer to the evaluator emotions and attitudes about using our interface. The idea behind this evaluation is to assess how the user feels about our interface and assess that the user experience goals are met.
+User experience refers to the evaluator emotions and attitudes about using our interface. The idea behind this evaluation is to assess how the user feels about our interface and assess that the user experience goals are met.
 
 
 \subsubsection{Conducting evaluation}
@@ -329,8 +329,8 @@ This user experience evaluation strictly follows the one given by the assistant 
 
 \section{Acknowledgement}
 
-Before ending this report, we would really like to thanks the VUB Soft Lab for lending us the HTC Vive needed for the realization of this project.
-We also would like to thanks participants of the evaluation and all others that gave us feedback during the making of this Next-gen UI.
+Before ending this report, we would really like to thank the VUB Soft Lab for lending us the HTC Vive needed for the realization of this project.
+We also would like to thank participants of the evaluation and everyone who gave us feedback during the making of this Next-gen UI.
 
 \section{Conclusion and Future work}
 We proposed IPB, an intelligent picture browser that allows the user to see pictures corresponding to tags all around him in a VR environment. This was accomplished in several iterations using state-of-the-art technologies. The outcome is fully functional and was tested against different users with different accents to assess their user experience as well as the application usability. The evaluation was mostly positive but flaws were discovered thanks to the feedback we received and most of them were corrected. However, the application could be, in the future, made easier to learn as well as faster to run.
