--- a/report/final/biblio.bib
+++ b/report/final/biblio.bib
@@ -1,16 +1,15 @@
 @article{Mazuryk1996,
-abstract = {Virtual Reality (VR), sometimes called Virtual Environments (VE) has drawn much attention in the last few years. Extensive media coverage causes this interest to grow rapidly. Very few people, however, really know what VR is, what its basic principles and its open problems are. In this paper a historical overview of virtual reality is presented, basic terminology and classes of VR systems are listed, followed by applications of this technology in science, work, and entertainment areas. An insightful study of typical VR systems is done. All components of VR application and interrelations between them are thoroughly examined: input devices, output devices and software. Additionally human factors and their implication on the design issues of VE are discussed . Finally, the future of VR is considered in two aspects: technological and social. New research directions, technological frontiers and potential applications are pointed out. The possible positive and negative influence of VR on li...},
-author = {Mazuryk, Tomasz and Gervautz, Michael},
-doi = {http://dx.doi.org/10.1016/B978-0-12-404705-1.00006-6},
-file = {:home/supayrponey/Master Thesis/Papers/TR-186-2-96-06Paper.pdf:pdf},
-isbn = {978-1-4244-4347-5},
-issn = {0010-4825},
-journal = {Technical Report},
-keywords = {AbleGamers,Apple iPad,Clinical study,Depression,Electronic Arts,Game,Health-related quality of life,Includification,Lakeside Center for Autism,Medicare,Microsoft Kinect,Motor function,Neuromotor,Notre Dame,Rehabilitatio,Rehabilitation,Rutgers Tele-Rehabilitation Institute,Stroke,Virtual Reality,Virtual reality,Wii,WiiHab,WiiHabilitation,Xbox 360,autism spectrum disorder,homebound patients,neuromotor,physical therapy,remote patient monitoring,stroke,vestibular,video games,virtual reality},
-title = {{Virtual Reality: History, Applications, Technology and Future}},
-url = {{http://www.sciencedirect.com/science/article/pii/B9780124047051000066$\backslash$nhttp://linkinghub.elsevier.com/retrieve/pii/B9780124047051000078$\backslash$n"http://www.cg.tuwien.ac.at/research/publications/1996/mazuryk-1996-VRH/", {\}}$\backslash$nhttp://citeseerx.ist.psu.edu/viewdoc/dow},
-volume = {TR-186-2-9},
-year = {1996}
+	abstract = {Virtual Reality (VR), sometimes called Virtual Environments (VE) has drawn much attention in the last few years. Extensive media coverage causes this interest to grow rapidly. Very few people, however, really know what VR is, what its basic principles and its open problems are. In this paper a historical overview of virtual reality is presented, basic terminology and classes of VR systems are listed, followed by applications of this technology in science, work, and entertainment areas. An insightful study of typical VR systems is done. All components of VR application and interrelations between them are thoroughly examined: input devices, output devices and software. Additionally human factors and their implication on the design issues of VE are discussed . Finally, the future of VR is considered in two aspects: technological and social. New research directions, technological frontiers and potential applications are pointed out. The possible positive and negative influence of VR on li...},
+	author = {Mazuryk, Tomasz and Gervautz, Michael},
+	doi = {http://dx.doi.org/10.1016/B978-0-12-404705-1.00006-6},
+	isbn = {978-1-4244-4347-5},
+	issn = {0010-4825},
+	journal = {Technical Report},
+	keywords = {AbleGamers,Apple iPad,Clinical study,Depression,Electronic Arts,Game,Health-related quality of life,Includification,Lakeside Center for Autism,Medicare,Microsoft Kinect,Motor function,Neuromotor,Notre Dame,Rehabilitatio,Rehabilitation,Rutgers Tele-Rehabilitation Institute,Stroke,Virtual Reality,Virtual reality,Wii,WiiHab,WiiHabilitation,Xbox 360,autism spectrum disorder,homebound patients,neuromotor,physical therapy,remote patient monitoring,stroke,vestibular,video games,virtual reality},
+	title = {{Virtual Reality: History, Applications, Technology and Future}},
+	url = {{http://www.sciencedirect.com/science/article/pii/B9780124047051000066$\backslash$nhttp://linkinghub.elsevier.com/retrieve/pii/B9780124047051000078$\backslash$n"http://www.cg.tuwien.ac.at/research/publications/1996/mazuryk-1996-VRH/", {\}}$\backslash$nhttp://citeseerx.ist.psu.edu/viewdoc/dow},
+	volume = {TR-186-2-9},
+	year = {1996}
 }
 @inproceedings{calado2013virtual,
   title={Virtual Reality Applied to the Study of the Interaction between the User and the Built Space: A Literature Review},
@@ -35,3 +34,19 @@ year = {1996}
   year={2008},
   organization={Springer}
 }
+
+@article{Calado2013,
+	abstract = {This article examines from a theoretical academic research, concepts, definitions and elements that consist the universe of virtual reality (VR) and Augmented Reality (AR), with the goal of applying them to spaces constructed both by professionals specialized in developing environments, as many by its users.},
+	author = {Calado, Alexana Vilar Soares and Soares, Marcelo M{\'{a}}rcio and Campos, Fabio and Correia, Walter},
+	doi = {10.1007/978-3-642-39238-2_38},
+	isbn = {9783642392375},
+	issn = {03029743},
+	journal = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+	keywords = {Architecture,Augmented Reality,Interior Design,Virtual Reality},
+	number = {PART 3},
+	pages = {345--351},
+	title = {{Virtual reality applied to the study of the interaction between the user and the built space: A literature review}},
+	volume = {8014 LNCS},
+	year = {2013}
+}
+
