--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -169,7 +169,7 @@ The user can
 
 Interactions with the applications are possible in four possible modes:
 \begin{enumerate}
-\item \textbf{Movement} Being in a Virtual Reality, the user can move around, if the space around him allows, and get physically closer to the pictures to analyze them better.
+\item \textbf{Movement} Being in a Virtual Reality, the user can move around, if the space around him allows, and get physically closer to the pictures to analyze them better.\cite{Calado2013}.
 
 \item \textbf{Vision}
 When a user looks at a picture, it gets automatically selected to allow the user to apply advanced functions.
@@ -328,10 +328,6 @@ Now regarding the heuristics, the 5 evaluations could be summarized as follow :
 \end{itemize}
 
 
-
-In fact, the user really
-
-
 \subsection{User experience}
 
 User experience refers to the evaluator emotions and attitudes about using our interface. The idea behind this evaluation is to assess how the user feels about our interface and assess that the user experience goals are met.
@@ -341,7 +337,11 @@ User experience refers to the evaluator emotions and attitudes about using our i
 
 This user experience evaluation strictly follows the one given by the assistant during the lab session for the spoon. We used some help from \cite{laugwitz2008construction} to conduct it properly. This evaluation give us a score between -3 and 3 for the following keypoints:
 \begin{itemize}
-	\item Attractiveness	\item Perspicuity	\item Novelity	\item Stimulation	\item Dependability
+	\item Attractiveness
+	\item Perspicuity
+	\item Novelity
+	\item Stimulation
+	\item Dependability
 \end{itemize}
 
 It was done just after the usability evaluation. There are 5 evaluators in total so we have to keep in mind that the result could be not statically significant.
