it's the final countdown

--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -12,7 +12,7 @@
 \usepackage{afterpage}
 \usepackage{pdfpages}
 \author{Pierre Gerard - Matteo Marra - Bruno Rocha Pereira}
-\title{Intelligent Picture Browser \\ - \\Given One \\  - \\Requirements and Analysis report}
+\title{Intelligent Picture Browser \\ - \\Given One \\  - \\NGUI report}
 \date{December 19, 2016}
 
 \begin{document}
@@ -215,7 +215,7 @@ The selected technologies are :
 
 As said above, the VR will be built using the game engine \textit{Unity3D} \footnote{https://unity3d.com/} for the application graphics and code. It has been chosen by considering different scientific papers such as \cite{Mazuryk1996} and \cite{calado2013virtual}.
 
-The pictures tagging is done automatically using a neural network. More precisely the tagging is done using TensorFlow \cite{abadi2016tensorflow}, a deep convolutional neural network, with a selected pre-trained model on ImageNet \footnote{http://www.image-net.org/}. The selected model, Inception-v3,\todo{ref needed} can classify entire pictures library into 1000 classes such as for example cliff, seashore, dishwasher, leopard, ... Each picture given as input to the network will give as an output a vector of probability corresponding to the probability to find each of the 1000 class in the pictures. Then the idea is to select the ones with the higher probabilities.
+The pictures tagging is done automatically using a neural network. More precisely the tagging is done using TensorFlow \cite{abadi2016tensorflow}, a deep convolutional neural network, with a selected pre-trained model on ImageNet \footnote{http://www.image-net.org/}. The selected model, Inception-v3, can classify entire pictures library into 1000 classes such as for example cliff, seashore, dishwasher, leopard, ... Each picture given as input to the network will give as an output a vector of probability corresponding to the probability to find each of the 1000 class in the pictures. Then the idea is to select the ones with the higher probabilities.
 
 
 \subsection{Architecture}
